--- a/login.html
+++ b/login.html
@@ -21,7 +21,7 @@
     <br>
     </form>
     <input type="button" class ="button" value="Ingresar"> <br><br>
-    <a href="#">¿Olvidaste tu Contraseña?</a>
+    <a href="Recuperar.html">¿Olvidaste tu Contraseña?</a>
     </div>
     </div>
 </body>
