--- a/Recuperar.html
+++ b/Recuperar.html
@@ -17,7 +17,7 @@
             </form>
             <br>
             <br>
-            <input id="buttonrecuperar" type="button" class ="button" value="Enviar"> <br><br>
+            <a href="login.html"><input id="buttonrecuperar" type="button" class ="button" value="Enviar"></a> <br><br>
             <br>
             <br>
             <h2>Se enviara una confirmacion a su correo electronico</h2>
