--- a/login.html
+++ b/login.html
@@ -22,6 +22,8 @@
     </form>
     <input type="button" class ="button" value="Ingresar"> <br><br>
     <a href="Recuperar.html">¿Olvidaste tu Contraseña?</a>
+    <br><br><br>
+    <a href="Crear.html">Crear Usuarios</a>
     </div>
     </div>
 </body>
