nuevo cambio de correccion

--- a/login.html
+++ b/login.html
@@ -16,7 +16,7 @@
     <br>
     <p>Login<p> 
     <form>
-    <input type="text" placeholder = "Usuario electronico" name ="correo"> <br>
+    <input type="text" placeholder = "Usuario o correo electronico" name ="correo"> <br>
     <input type="text" placeholder = "Contraseña"  name ="correo"> <br>
     <br>
     </form>
