Cambio en login HTML Y CSS

--- a/login.html
+++ b/login.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="./css/login.css">
     <title>Document</title>
 </head>
-<body >
+<body background="./img/patron2.jpg">
     <div class="grid-container">
     <div class="grid-item" id="cont1">
         </div>
@@ -16,8 +16,8 @@
     <br>
     <p>Login<p> 
     <form>
-    <input type="text" placeholder = "Usuario electronico" name ="correo"> <br>
-    <input type="text" placeholder = "Contraseña"  name ="correo"> <br>
+    <input type="text" placeholder = "Usuario o Correo electronico" name ="correo"> <br>
+    <input type="password" placeholder = "Contraseña"  name ="correo"> <br>
     <br>
     </form>
     <input type="button" class ="button" value="Ingresar"> <br><br>
