Mejoras en el login

--- a/Recuperar.html
+++ b/Recuperar.html
@@ -20,7 +20,7 @@
             <a href="login.html"><input id="buttonrecuperar" type="button" class ="button" value="Enviar"></a> <br><br>
             <br>
             <br>
-            <h2>Se enviara una confirmacion a su correo electronico</h2>
+            <h2>Se enviará una confirmación a su correo electronico</h2>
         </div>
     </div>
 </body>
