--- a/login.html
+++ b/login.html
@@ -9,7 +9,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;300;400;500;600;800&display=swap" rel="stylesheet">
     <title>Document</title>
 </head>
-<body background="./img/patron2.jpg">
+<body>
     <div class="grid-container">
     <div class="grid-item" id="cont1">
         </div>
