--- a/Crear.html
+++ b/Crear.html
@@ -11,7 +11,7 @@
         <div id="recuperar">
             <br>
             <br>
-            <h1>Creacion de Usuarios</h1>
+            <h1>Creación de Usuarios</h1>
             <form>
             <input type="text" placeholder = "Correo electronico" name ="correo"> <br>
             <input type="text" placeholder = "Nombre" name ="correo"> <br>
@@ -19,7 +19,7 @@
             </form>
             <br>
             <a href="login.html"><input id="buttonrecuperar" type="button" class ="button" value="Crear"></a> <br>
-            <h2>Se le enviara al correo del cliente su respectivo usuario y contraseña </h2>
+            <h2>Se le enviará al correo del cliente su respectivo usuario y contraseña </h2>
         </div>
     </div>
 </body>
