--- a/menu.html
+++ b/menu.html
@@ -3,10 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./css/login.css"">
+    <link rel="stylesheet" href="./css/menu.css">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;300;400;500;600;800&display=swap" rel="stylesheet">
     <title>Document</title>
 </head>
-<body background="./img/patron2.jpg">
+<body>
     <div class="grid-container">
     <div class="grid-item" id="cont1">
         </div>
@@ -15,7 +16,7 @@
     <br>
     <p>Menú Principal<p> 
     <form>
-    <input type="text" placeholder = "Nombre producto" name ="nombreProducto"> <br>
+    <input type="search" placeholder = "Nombre producto" name ="nombreProducto"> <br>
     <br>
     </form>
     <input type="button" class ="button" value="Buscar"> <br><br>
