--- a/Recuperar.html
+++ b/Recuperar.html
@@ -11,7 +11,7 @@
         <div id="recuperar">
             <br>
             <br>
-            <h1>Ingrese su correo electronico asociado a su cuenta</h1>
+            <h1>Ingrese su correo electrónico asociado a su cuenta</h1>
             <form>
                 <input type="text" placeholder = "Correo electronico" name ="correo"> <br>
             </form>
@@ -20,7 +20,7 @@
             <a href="login.html"><input id="buttonrecuperar" type="button" class ="button" value="Enviar"></a> <br><br>
             <br>
             <br>
-            <h2>Se enviará una confirmación a su correo electronico</h2>
+            <h2>Se enviará una confirmación a su correo electrónico</h2>
         </div>
     </div>
 </body>
