--- a/menu.html
+++ b/menu.html
@@ -8,21 +8,36 @@
     <title>Document</title>
 </head>
 <body>
-    <div class="grid-container">
-    <div class="grid-item" id="cont1">
+    <div class="container">
+        <div class="header">
+            <br>
+            <p id="menu">Menu Principal</p>
+            <input class="buscar"type="text" placeholder = "Buscar Producto" name ="correo">
         </div>
-    <div class="grid-item" id="cont2">
-    <br>
-    <br>
-    <p>Menú Principal<p> 
-    <form>
-    <input type="search" placeholder = "Nombre producto" name ="nombreProducto"> <br>
-    <br>
-    </form>
-    <input type="button" class ="button" value="Buscar"> <br><br>
-    
+        <div class="elementos">
+            <a href="login.html"><button class="buttonelementos">Agregar Productos</button></a> 
+            <a href="login.html"><button class="buttonelementos">Cerrar sesión</button></a>
+        </div>
+        <div class="grid-container">
+            <div class="grid-item" id="div1"> </div>
+            <div class="grid-item descript" ></div>
+            <div class="grid-item" id="div1"> </div>  
+            <div class="grid-item descript" ></div>
+            <div class="grid-item" id="div1"> </div>
+            <div class="grid-item descript" ></div>
+            <div class="grid-item" id="div1"> </div>
+            <div class="grid-item descript" ></div>
+            <div class="grid-item" id="div1"> </div>
+            <div class="grid-item descript" ></div>
+            <div class="grid-item" id="div1"> </div>
+            <div class="grid-item descript" ></div>  
+            <div class="grid-item" id="div1"> </div>
+            <div class="grid-item descript" ></div>
+            <div class="grid-item" id="div1"> </div> 
+            <div class="grid-item descript" ></div>
+            <div class="grid-item" id="div1"> </div>
+            <div class="grid-item descript" ></div>
+          </div>
     </div>
-    </div>
-    
 </body>
 </html>
