Actualizacion del menu

--- a/menu.html
+++ b/menu.html
@@ -15,7 +15,7 @@
             <input class="buscar"type="text" placeholder = "Buscar Producto" name ="correo">
         </div>
         <div class="elementos">
-            <a href="login.html"><button class="buttonelementos">Agregar Productos</button></a> 
+            <a href="GuardaryEliminar.html"><button class="buttonelementos">Agregar Productos</button></a> 
             <a href="login.html"><button class="buttonelementos">Cerrar sesión</button></a>
         </div>
         <div class="grid-container">
