--- a/login.html
+++ b/login.html
@@ -22,7 +22,7 @@
             <input type="password" placeholder = "Contraseña"  name ="correo"> <br>
             <br>
             </form>
-            <input type="button" class ="button" value="Ingresar"> <br><br>
+            <a href="menu.html"><input type="button" class ="button" value="Ingresar"></a> <br><br>
             <a href="Recuperar.html">¿Olvidaste tu Contraseña?</a>
             <br><br><br>
             <a href="Crear.html">Crear Usuarios</a>
