--- a/menu.html
+++ b/menu.html
@@ -19,7 +19,7 @@
             <a href="login.html"><button class="buttonelementos">Cerrar sesión</button></a>
         </div>
         <div class="grid-container">
-            <div class="grid-item" id="div1"> </div>
+            <div class="grid-item" id="div1"> <img src="./img/descarga.jpg" alt=""> </div>
             <div class="grid-item descript" ></div>
             <div class="grid-item" id="div1"> </div>  
             <div class="grid-item descript" ></div>
