--- a/login.html
+++ b/login.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <script src="js/validausuario.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/login.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -21,8 +22,8 @@
             <input type="text" placeholder = "Usuario o Correo electronico" name ="correo"> <br>
             <input type="password" placeholder = "Contraseña"  name ="correo"> <br>
             <br>
-            </form>
-            <a href="menu.html"><input type="button" class ="button" value="Ingresar"></a> <br><br>
+            <form>
+            <a href="menu.html"><input type="text" class ="button" value="Ingresar"></a> <br><br>
             <a href="Recuperar.html">¿Olvidaste tu Contraseña?</a>
             <br><br><br>
             <a href="Crear.html">Crear Usuarios</a>
