--- a/Crear.html
+++ b/Crear.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Recuperar</title>
-    <link rel="stylesheet" href="./css/login.css">
+    <link rel="stylesheet" href="./css/crear.css">
     <script src="./js/validausuario.js"></script>
 </head>
 <body id ="bodyrecuperar">
