--- a/login.html
+++ b/login.html
@@ -17,13 +17,13 @@
         <div class="grid-item" id="cont2">
             <br>
             <br>
-            <p>Login<p> 
+            <p>Iniciar Sesión<p> 
             <form>
             <input type="text" placeholder = "Usuario o Correo electronico" name ="correo"> <br>
             <input type="password" placeholder = "Contraseña"  name ="correo"> <br>
             <br>
             <form>
-            <a href="menu.html"><input type="text" class ="button" value="Ingresar"></a> <br><br>
+            <a href="menu.html"><input type="button" class ="button" value="Ingresar"></a> <br><br>
             <a href="Recuperar.html">¿Olvidaste tu Contraseña?</a>
             <br><br><br>
             <a href="Crear.html">Crear Usuarios</a>
