--- a/menu.html
+++ b/menu.html
@@ -11,7 +11,7 @@
     <div class="container">
         <div class="header">
             <br>
-            <p id="menu">Menu Principal</p>
+            <p id="menu">Menú Principal</p>
             <input class="buscar"type="text" placeholder = "Buscar Producto" name ="correo">
         </div>
         <div class="elementos">
