--- a/Crear.html
+++ b/Crear.html
@@ -17,7 +17,7 @@
             <input type="text"name="email" placeholder = "Correo electronico" > <br>
             <input type="text" placeholder = "Nombre" name ="usuario"> <br>
             <input input type="password" name="password" placeholder = "Contraseña" > <br>
-            <input id="buttonrecuperar" type="submit" class ="button" value="Crear"><br>
+            <input id="buttonrecuperar" type="button" class ="button" value="Crear"><br>
             </form>
             <a href="login.html"><input id="buttonrecuperar" type="button" class ="button" value="Volver"></a>
             <br>
