--- a/GuardaryEliminar.html
+++ b/GuardaryEliminar.html
@@ -25,13 +25,13 @@
         <label>
             Nombre: 
             <br>
-            <input type="text"   value="Jugo hit Mango">
+            <input type="text" placeholder="Nombre producto" name="nombreProducto">
         </label>
        
         <label>
             Cantidad:
             <br>
-            <input type="text" name="Cantidad" value="100">
+            <input type="text" name="Cantidad" placeholder="Cantidad en stock">
         </label>
     </div>
     </div>
