--- a/GuardaryEliminar.html
+++ b/GuardaryEliminar.html
@@ -14,9 +14,9 @@
         <p id="producto">Producto</p>
     </div>
         <div class="elementos">
-            <a href="menu.html"><button class="buttonelementos"> Guardar </button></a> 
-            <a href="menu.html"><button class="buttonelementos"> Eliminar</button></a>
-            <a href="menu.html"><button class="buttonelementos"> Volver</button></a>
+            <a href="menubo.html"><button class="buttonelementos"> Guardar </button></a> 
+            <a href="menubo.html"><button class="buttonelementos"> Eliminar</button></a>
+            <a href="menubo.html"><button class="buttonelementos"> Volver</button></a>
     </div>
 
     <div class="grid-container">
