--- a/menubo.html
+++ b/menubo.html
@@ -17,8 +17,10 @@
     </div>
     <div class="elementos">
         <input class="elbuscar"type="text" placeholder = "Buscar Producto" name ="correo">
-        <a href="GuardaryEliminar.html"><button class="buttonelementos">Agregar Productos</button></a> 
-        <a href="login.html"><button class="buttonelementos">Cerrar sesión</button></a>
+        <a href="crearproducto.html"><button class="buttonelementos">Agregar Productos</button></a> 
+        <a href="Crear.html"> <button class="buttonelementos"> Crear usuario</button> </a>
+        <a href="login.html"> <button class="buttonelementos">Cerrar sesión</button></a>
+        
     </div>
 
     <div class="grid-container">
