--- a/Crear.html
+++ b/Crear.html
@@ -12,7 +12,7 @@
         <div id="recuperar">
             <br>
             <br>
-            <h1>Creación de Usuarios</h1>
+            <h1>Creación de Usuario</h1>
             <form name="formulario" method="post" action="" onSubmit="return validar_formulario();">
             <input type="text"name="email" placeholder = "Correo electronico" > <br>
             <input type="text" placeholder = "Nombre" name ="usuario"> <br>
