--- a/Recuperar.html
+++ b/Recuperar.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Recuperar</title>
-    <link rel="stylesheet" href="./css/recuperar.css">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/recuperar.css') }}">
 </head>
 <body id ="bodyrecuperar">
     <div id="contrecuperar" >
