--- a/Crear.html
+++ b/Crear.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Recuperar</title>
-    <link rel="stylesheet" href="./css/crear.css">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/crear.css') }}">
     <script src="./js/validausuario.js"></script>
 </head>
 <body id ="bodyrecuperar">
@@ -13,11 +13,11 @@
             <br>
             <br>
             <h1>Creación de Usuario</h1>
-            <form name="formulario" method="post" action="" onSubmit="return validar_formulario();">
-            <input type="text"name="email" placeholder = "Correo electronico" > <br>
+            <form name ="formulario" method="post" action="{{ url_for('procesar') }}" onSubmit="return validar_formulario();">
+            <input type="text" name="email" placeholder = "Correo electronico" > <br>
             <input type="text" placeholder = "Nombre" name ="usuario"> <br>
             <input input type="password" name="password" placeholder = "Contraseña" > <br>
-            <input id="buttonrecuperar" type="button" class ="button" value="Crear"><br>
+            <input id="buttonrecuperar" type="submit" class ="button" value="Crear"><br>
             </form>
             <a href="login.html"><input id="buttonrecuperar" type="button" class ="button" value="Volver"></a>
             <br>
