--- a/menubo.html
+++ b/menubo.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
-    <link rel="stylesheet" href="./css/menubo.css">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/menubo.css') }}">
     <title>Document</title>
 </head>
 
@@ -17,8 +17,8 @@
     </div>
     <div class="elementos">
         <input class="elbuscar"type="text" placeholder = "Buscar Producto" name ="correo">
-        <a href="crearproducto.html"><button class="buttonelementos">Agregar Productos</button></a> 
-        <a href="Crear.html"> <button class="buttonelementos"> Crear usuario</button> </a>
+        <a href="{{ url_for('crearProducto') }}"><button class="buttonelementos">Agregar Productos</button></a>
+        <a href="{{ url_for('crear') }}"> <button class="buttonelementos"> Crear usuario</button> </a>
         <a href="login.html"> <button class="buttonelementos">Cerrar sesión</button></a>
         
     </div>
