--- a/Recuperar.html
+++ b/Recuperar.html
@@ -12,14 +12,15 @@
             <br>
             <br>
             <h1>Ingrese su correo electrónico asociado a su cuenta</h1>
-            <form>
+            <form name ="formulario" method="post" action="{{ url_for('enivarcontraseña') }}">
                 <input type="text" placeholder = "Correo electronico" name ="correo"> <br>
+
+            <br>
+            <br>
+            <a href="login.html"><input id="buttonrecuperar" type="submit" class ="button" value="Enviar"></a> <br><br>
+            <br>
+            <br>
             </form>
-            <br>
-            <br>
-            <a href="login.html"><input id="buttonrecuperar" type="button" class ="button" value="Enviar"></a> <br><br>
-            <br>
-            <br>
             <h2>Se enviará una confirmación a su correo electrónico</h2>
         </div>
     </div>
