--- a/login.html
+++ b/login.html
@@ -24,7 +24,7 @@
             <br>
             </form>
             <a href="{{ url_for('menu') }}"><input type="button" class ="button" value="Ingresar"></a> <br><br>
-            <a href="Recuperar.html">¿Olvidaste tu Contraseña?</a>
+            <a href="{{ url_for('recuperar') }}">¿Olvidaste tu Contraseña?</a>
             <br><br><br>
             
          </div>
